--- a/geocms/templates/terrapyn/geocms/layer.html
+++ b/geocms/templates/terrapyn/geocms/layer.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
-{% load mezzanine_tags pages_tags geoanalytics_tags %}
+{% load mezzanine_tags pages_tags geoanalytics_tags staticfiles %}
 
 {% block main %}{{ block.super }}
-    <div class='simple-map' id="map" style='width: 100%; height:400px'></div>
-    <h6><a href="{{ page.renderedlayer.data_resource.get_absolute_url }}">Link to original data and web-services.</a></h6>
-    {% if page.renderedlayer.default_style.legend %}
-    <p><img src='{{page.renderedlayer.default_style.legend.url}}'/></p>
+    <h1>{{ layer.title }}</h1>
+    <div class='map' id="map" style='width: 100%;'></div>
+    <div class="col-md-6" id="fullscreen"></div>
+    <h6><a href="{{ layer.data_resource.get_absolute_url }}">Link to original data and web-services.</a></h6>
+    {% if layer.default_style.legend %}
+    <p><img src='{{layer.default_style.legend.url}}'/></p>
     {% endif %}
 
     {% if layer.description %}
@@ -17,7 +19,7 @@
 
     <div class="row">
 
-        <div class="span4">
+        <div class="col-md-3">
             <ul class='nav nav-list'>
                 <li class="nav-header">Edit or view stylesheet</li>
                 {% for style in layer.styles.all %}
@@ -27,7 +29,7 @@
 
             </ul>
         </div>
-        <div class="span4">
+        <div class="col-md-3">
             <ul class='nav nav-list'>
                 <li class="nav-header">Render layer with style</li>
                 {% for style in layer.styles.all %}
@@ -38,7 +40,7 @@
                 {% endfor %}
             </ul>
         </div>
-        <div class="span4">
+        <div class="col-md-3">
             <ul class="nav nav-list">
                 <li class="nav-header">WMS web services</li>
                 {% for style in layer.styles.all %}
@@ -47,129 +49,31 @@
                 {% endfor %}
             </ul>
         </div>
+        <div class="col-md-3">
+            <ul class="nav nav-list">
+                <li class="nav-header">TMS web services</li>
+                {% for style in layer.styles.all %}
+                    <li><a href="{% url "tms" layer=layer.slug %}?&style={{ style.slug }}">Layer as {{ style.title }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
     </div>
-
-
-
 {% endblock %}
 
 {% block extra_js %}
-    <script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
-    <script src="{{STATIC_URL}}ol/OpenLayers.debug.js"></script>
+    <script src="{% static 'js/ol.js' %}" type="text/javascript"></script>
     <script type="text/javascript">
-        $(function() {
-            var in_options = {
-                internalProjection: new OpenLayers.Projection('EPSG:3857'),
-                externalProjection: new OpenLayers.Projection("EPSG:4326")
-            };
-
-            var wkt = new OpenLayers.Format.WKT(in_options);
-            var feature = wkt.read("{{ page.renderedlayer.data_resource.bounding_box.wkt }}");
-            var bounds = feature.geometry.getBounds();
-
-
-            var wms = new OpenLayers.Layer.WMS('{{ page.renderedlayer.title }}', "/geographica/resources/wms/", {
-
-                {% if not request.GET.style %}
-                styles: "{{ page.renderedlayer.default_style.slug }}",
-                {% else %}
-                styles: "{{ request.GET.style }}",
-                {% endif %}
-
-                layers: "{{ page.renderedlayer.slug }}",
-                transparent: true
-            });
-
-            var tms = new OpenLayers.Layer.XYZ("{{ page.renderedlayer.title }}",
-                    [
-                        "/geographica/resources/{{page.renderedlayer.slug}}/tms/${z}/${x}/${y}/"
-                    ],
-                    {
-                        transitionEffect: "resize",
-                        isBaseLayer: false
-                    }
-            );
-
-
-            var map = new OpenLayers.Map({ div:'map', projection: new OpenLayers.Projection("EPSG:3857")});
-
-            var layers = [
-                new OpenLayers.Layer.Google(
-                        "Google Physical",
-                        {type: google.maps.MapTypeId.TERRAIN}
-                ),
-                new OpenLayers.Layer.Google(
-                        "Google Streets", // the default
-                        {numZoomLevels: 20}
-                ),
-                new OpenLayers.Layer.Google(
-                        "Google Hybrid",
-                        {type: google.maps.MapTypeId.HYBRID, numZoomLevels: 20}
-                ),
-                new OpenLayers.Layer.Google(
-                        "Google Satellite",
-                        {type: google.maps.MapTypeId.SATELLITE, numZoomLevels: 22}
-                ),
-                tms
-            ];
-
-            map.addLayers(layers);
-            map.addLayer(wms);
-            map.removeLayer(wms);
-            infoControl = new OpenLayers.Control.WMSGetFeatureInfo({
-                    url: '/geographica/resources/wms/',
-                    layers: [wms],
-                    title: "{{ page.title }}",
-                    hover : false,
-                    queryVisible: true,
-                    eventListeners: {
-                        getfeatureinfo: function(event) { console.log(event); if(event.text) {
-                            var tbl = $("<table class='table'></table>");
-                            var th = $('<thead></thead>');
-                            var tb = $('<tbody></tbody>');
-
-                            var header = $('<tr></tr>');
-                            if(event.features.length) {
-                                for(var k in event.features[0].attributes) {
-                                    if(event.features[0].attributes.hasOwnProperty(k)) {
-                                        header = header.append("<th>" + k + "</th>");
-                                    }
-                                }
-                            }
-                            th = th.append(header);
-
-                            for(var f=0; f<event.features.length; f++) {
-                                var l = $("<tr></tr>");
-                                for(var k in event.features[f].attributes) { if(event.features[f].attributes.hasOwnProperty(k)) {
-                                    l = l.append("<td>" + event.features[f].attributes[k].toString() + "</td>");
-                                }}
-                                tb = tb.append(l);
-                            }
-
-                            tbl = tbl.append(th).append(tb);
-                            $("#info-panel").html(tbl);
-                        }}
-                    }
-            });
-
-            map.addControl(infoControl);
-            map.addControl(new OpenLayers.Control.LayerSwitcher());
-            map.zoomToExtent(bounds);
-            infoControl.activate();
-
-        });
+    var LAYER = {
+        url: "{% url "tms" layer=layer.slug %}",
+        attribution: null,
+        styles: "",
+        extent: "{{ metadata.bounding_box.wkt }}"
+    }
     </script>
+    <script src="{% static 'geocms/layer.js' %}" type="text/javascript"></script>
 {% endblock %}
 
 {% block extra_css %}
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="http://openlayers.org/dev/theme/default/style.css" type="text/css">
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/font-awesome.css">
+    <link rel="stylesheet" href="{% static "css/ol.css" %}" />
 {% endblock %}
