--- a/geocms/templates/terrapyn/geocms/res.html
+++ b/geocms/templates/terrapyn/geocms/res.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% load mezzanine_tags pages_tags geoanalytics_tags inplace_edit %}
+{% load mezzanine_tags pages_tags geoanalytics_tags inplace_edit staticfiles %}
 
 {% block meta_title %}{{ res.title }}{% endblock %}
 
@@ -127,38 +127,17 @@
     </div>
 {% endblock %}
 
-{% block extra_js %}
-    <script src="//cdnjs.cloudflare.com/ajax/libs/openlayers/2.13.1/OpenLayers.js"></script>
-    {% if metadata %}
+{{% block extra_js %}
+    <script src="{% static 'js/ol-debug.js' %}" type="text/javascript"></script>
     <script type="text/javascript">
-        $(function() {
-            var in_options = {
-                internalProjection: new OpenLayers.Projection('EPSG:3857'),
-                externalProjection: new OpenLayers.Projection("EPSG:4326")
-            };
-
-            var bboxLayer = new OpenLayers.Layer.Vector('bbox');
-            var wkt = new OpenLayers.Format.WKT(in_options);
-            var feature = wkt.read("{{ metadata.bounding_box.wkt }}");
-            bboxLayer.addFeatures([feature]);
-            var bounds = feature.geometry.getBounds();
-
-            var map = new OpenLayers.Map({ div:'map', projection: "EPSG:3857", layers: [
-                new OpenLayers.Layer.XYZ(
-                        "OpenStreetMap",
-                        [
-                            "http://otile1.mqcdn.com/tiles/1.0.0/map/${z}/${x}/${y}.png",
-                            "http://otile2.mqcdn.com/tiles/1.0.0/map/${z}/${x}/${y}.png",
-                            "http://otile3.mqcdn.com/tiles/1.0.0/map/${z}/${x}/${y}.png",
-                            "http://otile4.mqcdn.com/tiles/1.0.0/map/${z}/${x}/${y}.png"
-                        ]
-                ),
-                bboxLayer
-            ]});
-
-            map.zoomToExtent(bounds);
-        });
+    var DATA = {
+        extent: "{{ metadata.bounding_box.wkt }}"
+    }
     </script>
-    {% endif %}
+    <script src="{% static 'geocms/res.js' %}" type="text/javascript"></script>
+{% endblock %}
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static "css/ol.css" %}" />
 {% endblock %}
 
