--- a/geocms/templates/terrapyn/geocms/layer.html
+++ b/geocms/templates/terrapyn/geocms/layer.html
@@ -49,7 +49,7 @@
     {% endif %}
 
     {% if layer.description %}
-    {{ layer.description|md|safe }}
+    {{ layer.description|safe }}
     {% endif %}
 
     <h4>Available Styles</h4>
